# SmObEx

./: .gitignore  README.md  install_dependencies.sh
fanuc/fanuc_m6ib6s_moveit_config/: .setup_assistant
fanuc_m6ib6s_support/: CMakeLists.txt  package.xml
fanuc_m6ib6s_support/launch/: load_m6ib6s.launch  robot_interface_streaming_m6ib6s.launch  robot_state_visualize_m6ib6s.launch  test_m6ib6s.launch
fanuc_m6ib6s_support/tests/: roslaunch_test.xml
fanuc_m6ib6s_support/urdf/: m6ib6s.xacro  m6ib6s_macro.xacro
fanuc_xtion_ikfast_manipulator_plugin/: CMakeLists.txt  fanuc_xtiob_manipulator_moveit_ikfast_plugin_description.xml  fanuc_xtion_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
fanuc_xtion_ikfast_manipulator_plugin/src/: fanuc_xtiob_manipulator_ikfast_moveit_plugin.cpp  fanuc_xtion_manipulator_ikfast_moveit_plugin.cpp
fanuc_xtion_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
fanuc_xtion_moveit_config/config/: controllers.yaml  fanuc_xtion.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sensors_3d.yaml
fanuc_xtion_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  fanuc_xtion_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
files/: test.bt
pedestal_description/: CMakeLists.txt  manifest.xml  package.xml
pedestal_description/urdf/: pedestal.urdf
smobex_actions/: CMakeLists.txt  package.xml
smobex_actions/action/: smobex_explorer.action
smobex_actions/include/: smobex.h
smobex_actions/src/: smobex_actions_server.cpp
smobex_asus_support/: CMakeLists.txt  package.xml
smobex_asus_support/urdf/: asus_xtion.xacro  asus_xtion_macro.xacro
smobex_bringup/: CMakeLists.txt  README.md  package.xml
smobex_bringup/config/: calibration_mode.rviz  capture_mode.rviz  defineVol_mode.rviz  operation_mode.rviz  record_mode.rviz  rviz.rviz  rviz2.rviz
smobex_bringup/description/: calib_vals.xacro  calibrated.xacro
smobex_bringup/launch/: aruco_marker_finder.launch  auto_mode.launch  bringup.launch  bringup2.launch  calib_mode.launch  calibrated.launch  capture_mode.launch  defineVol_mode.launch  moveit_robot.launch  octomap_BBox.launch  old.launch  only_aruco.launch  pcl_filter.launch  play_bag.launch  record.launch  record_bag.launch  robot_connect_params.launch  robot_state_visualize_m6ib6s.launch  robot_xtion.launch  test.launch  uncalibrated.launch
smobex_bringup/params/: camera_specs.yaml  config_params.yaml  default_params.yaml  pcl_params.yaml  people.yaml  shelf.yaml
smobex_bringup/script/: store_volume.py
smobex_bringup/src/: show_volume.cpp
smobex_calibration/: CMakeLists.txt  README.md  package.xml
smobex_description/: CMakeLists.txt  README.md  package.xml
smobex_explorer/: CMakeLists.txt  README.md  package.xml
smobex_explorer_action/: README.md  smobex_explorer_action.yaml
smobex_explorer_action/smobex_explorer_action_skill_msgs/: CMakeLists.txt  package.xml
smobex_explorer_action/smobex_explorer_action_skill_msgs/action/: SmobexExplorerActionSkill.action
smobex_explorer_action/smobex_explorer_action_skill_server/: CMakeLists.txt  package.xml
smobex_explorer_action/smobex_explorer_action_skill_server/include/smobex_explorer_action_skill_server/: smobex_explorer_action_skill_server.h
smobex_explorer_action/smobex_explorer_action_skill_server/launch/: run.launch
smobex_explorer_action/smobex_explorer_action_skill_server/src/: main.cpp  smobex_explorer_action_skill_server.cpp
smobex_manipulator_move/: CMakeLists.txt  package.xml
smobex_results/: CMakeLists.txt  README.md  octo_listen.cpp  package.xml
(+51 files in other folders)
